Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124287

QtSvg allocation too large memory when load the svg image

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.7.1, 6.8.0 FF
    • 6.7.0
    • SVG Support
    • None
    • All
    • e264f6468 (dev), b135faaf4 (6.7), bcfbccf32 (dev), f4b087ecb (6.7)

      QtSvg create some big QImage:

        1. screenshot-1.png
          screenshot-1.png
          931 kB
        2. About-Light.svg
          949 kB
        3. screenshot-2.png
          screenshot-2.png
          1.04 MB
        4. preferences-desktop-appearance-symbolic.svg
          44 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            matthias_rauter Matthias Rauter
            zccrs JiDe Zhang
            Votes:
            1 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes